[package]
name = "patdb_bin"
version = "0.1.0"
authors = ["Antoine Honoré <honore@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
walkdir = "2"
glob ="0.3.0"
rayon = "1.3.1"
num_cpus = "1.0"
chrono = "0.4.11"
unidecode = "0.3.0"
flate2 = "1.0"
base64 = "0.12.3"